# stm32-minimal-test

./: CMakeLists.txt  CMakePresets.json  Makefile  build-debug.bat  flash-debug.bat
include/: adc.h  boardsetuputils.h  core_cm4.h  gyro.h  i2c.h  magnet.h  spi.h  stm32f303xc.h  uart.h  utils.h  wakeup.h
linker/: STM32F303VCTx_FLASH.ld
src/: interrupthandler.c  main.c  startup_stm32f303xc.s
